--- a/app/pug/blocks/features.pug
+++ b/app/pug/blocks/features.pug
@@ -12,35 +12,35 @@
           li
             .features-block__item-wrap
               .features-block__img-wrap
-                img(src='https://via.placeholder.com/50x75', alt='')
+                img(src='../img/icons/1.png', alt='')
               .features-block__text-wrap
                 span &Kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&icy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy;&zcy; &ncy;&acy;&tcy;&ucy;&rcy;&acy;&lcy;&softcy;&ncy;&ocy;&gcy;&ocy; &dcy;&iecy;&rcy;&iecy;&vcy;&acy; &tscy;&iecy;&ncy;&ncy;&ycy;&khcy; &pcy;&ocy;&rcy;&ocy;&dcy;
                 p &Mcy;&iecy;&bcy;&iecy;&lcy;&softcy; &scy;&ocy;&bcy;&icy;&rcy;&acy;&iecy;&tcy;&scy;&yacy; &icy; &ocy;&bcy;&rcy;&acy;&bcy;&acy;&tcy;&ycy;&vcy;&acy;&iecy;&tcy;&scy;&yacy; &vcy;&rcy;&ucy;&chcy;&ncy;&ucy;&yucy; &icy;&ncy;&dcy;&icy;&jcy;&scy;&kcy;&icy;&mcy;&icy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&acy;&mcy;&icy;
           li
             .features-block__item
               .features-block__img-wrap
-                img(src='https://via.placeholder.com/50x75', alt='')
+                img(src='../img/icons/2.png', alt='')
               .features-block__text-wrap
                 span &Acy;&ncy;&tcy;&icy;&kcy;&vcy;&acy;&rcy;&icy;&acy;&tcy; &icy;&zcy; &YAcy;&pcy;&ocy;&ncy;&icy;&icy;
                 p &Scy;&acy;&mcy;&ucy;&rcy;&acy;&jcy;&scy;&kcy;&icy;&iecy; &mcy;&iecy;&chcy;&icy;, &kcy;&icy;&mcy;&ocy;&ncy;&ocy;, 
           li
             .features-block__item
               .features-block__img-wrap
-                img(src='https://via.placeholder.com/50x75', alt='')
+                img(src='../img/icons/3.png', alt='')
               .features-block__text-wrap
                 span &Kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&icy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy;&zcy; &ncy;&acy;&tcy;&ucy;&rcy;&acy;&lcy;&softcy;&ncy;&ocy;&gcy;&ocy; &dcy;&iecy;&rcy;&iecy;&vcy;&acy; &tscy;&iecy;&ncy;&ncy;&ycy;&khcy; &pcy;&ocy;&rcy;&ocy;&dcy;
                 p &Mcy;&iecy;&bcy;&iecy;&lcy;&softcy; &scy;&ocy;&bcy;&icy;&rcy;&acy;&iecy;&tcy;&scy;&yacy; &icy; &ocy;&bcy;&rcy;&acy;&bcy;&acy;&tcy;&ycy;&vcy;&acy;&iecy;&tcy;&scy;&yacy; &vcy;&rcy;&ucy;&chcy;&ncy;&ucy;&yucy; &icy;&ncy;&dcy;&icy;&jcy;&scy;&kcy;&icy;&mcy;&icy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&acy;&mcy;&icy;
           li
             .features-block__item
               .features-block__img-wrap
-                img(src='https://via.placeholder.com/50x75', alt='')
+                img(src='../img/icons/4.png', alt='')
               .features-block__text-wrap
                 span &Kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&icy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy;&zcy; &ncy;&acy;&tcy;&ucy;&rcy;&acy;&lcy;&softcy;&ncy;&ocy;&gcy;&ocy; &dcy;&iecy;&rcy;&iecy;&vcy;&acy; &tscy;&iecy;&ncy;&ncy;&ycy;&khcy; &pcy;&ocy;&rcy;&ocy;&dcy;
                 p &Mcy;&iecy;&bcy;&iecy;&lcy;&softcy; &scy;&ocy;&bcy;&icy;&rcy;&acy;&iecy;&tcy;&scy;&yacy; &icy; &ocy;&bcy;&rcy;&acy;&bcy;&acy;&tcy;&ycy;&vcy;&acy;&iecy;&tcy;&scy;&yacy; &vcy;&rcy;&ucy;&chcy;&ncy;&ucy;&yucy; &icy;&ncy;&dcy;&icy;&jcy;&scy;&kcy;&icy;&mcy;&icy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&acy;&mcy;&icy;
           li
             .features-block__item
               .features-block__img-wrap
-                img(src='https://via.placeholder.com/50x75', alt='')
+                img(src='../img/icons/5.png', alt='')
               .features-block__text-wrap
                 span &Kcy;&ocy;&lcy;&lcy;&iecy;&kcy;&tscy;&icy;&icy; &mcy;&iecy;&bcy;&iecy;&lcy;&icy; &icy;&zcy; &ncy;&acy;&tcy;&ucy;&rcy;&acy;&lcy;&softcy;&ncy;&ocy;&gcy;&ocy; &dcy;&iecy;&rcy;&iecy;&vcy;&acy; &tscy;&iecy;&ncy;&ncy;&ycy;&khcy; &pcy;&ocy;&rcy;&ocy;&dcy;
                 p &Mcy;&iecy;&bcy;&iecy;&lcy;&softcy; &scy;&ocy;&bcy;&icy;&rcy;&acy;&iecy;&tcy;&scy;&yacy; &icy; &ocy;&bcy;&rcy;&acy;&bcy;&acy;&tcy;&ycy;&vcy;&acy;&iecy;&tcy;&scy;&yacy; &vcy;&rcy;&ucy;&chcy;&ncy;&ucy;&yucy; &icy;&ncy;&dcy;&icy;&jcy;&scy;&kcy;&icy;&mcy;&icy; &mcy;&acy;&scy;&tcy;&iecy;&rcy;&acy;&mcy;&icy;
