--- a/app/pug/blocks/sales.pug
+++ b/app/pug/blocks/sales.pug
@@ -11,16 +11,17 @@
         .owl-stage
           .owl-item
             .sales-block__img-wrap
-              a(href='')
+              a(href='#')
                 img(src='./img/sales/1.jpg', alt='')
             .sales-block__text-block
+              a(href='#').sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
+              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
               .sales-block__price-wrap
                 span.sales-block__old-price
                   strike 59700 &#x20BD;
                 span.sales-block__price 59700 &#x20BD;
-              a(href='')
-                span.sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
-              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
+            .sales-block__button
+              a(href="#") В корзину
       .owl-stage-outer
         .owl-stage
           .owl-item
@@ -28,13 +29,14 @@
               a(href='')
                 img(src='./img/sales/2.jpg', alt='')
             .sales-block__text-block
+              a(href='#').sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
+              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
               .sales-block__price-wrap
                 span.sales-block__old-price
                   strike 59700 &#x20BD;
                 span.sales-block__price 59700 &#x20BD;
-              a(href='')
-                span.sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
-              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
+            .sales-block__button
+              a(href="#") В корзину
       .owl-stage-outer
         .owl-stage
           .owl-item
@@ -42,13 +44,14 @@
               a(href='')
                 img(src='./img/sales/3.jpg', alt='')
             .sales-block__text-block
+              a(href='#').sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
+              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
               .sales-block__price-wrap
                 span.sales-block__old-price
                   strike 59700 &#x20BD;
                 span.sales-block__price 59700 &#x20BD;
-              a(href='')
-                span.sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
-              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
+            .sales-block__button
+              a(href="#") В корзину
       .owl-stage-outer
         .owl-stage
           .owl-item
@@ -56,13 +59,14 @@
               a(href='')
                 img(src='./img/sales/1.jpg', alt='')
             .sales-block__text-block
+              a(href='#').sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
+              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
               .sales-block__price-wrap
                 span.sales-block__old-price
                   strike 59700 &#x20BD;
                 span.sales-block__price 59700 &#x20BD;
-              a(href='')
-                span.sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
-              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
+            .sales-block__button
+              a(href="#") В корзину
       .owl-stage-outer
         .owl-stage
           .owl-item
@@ -70,13 +74,14 @@
               a(href='')
                 img(src='./img/sales/2.jpg', alt='')
             .sales-block__text-block
+              a(href='#').sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
+              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
               .sales-block__price-wrap
                 span.sales-block__old-price
                   strike 59700 &#x20BD;
                 span.sales-block__price 59700 &#x20BD;
-              a(href='')
-                span.sales-block__title &Kcy;&ocy;&mcy;&ocy;&dcy; &quot;&Vcy;&ocy;&scy;&tcy;&ocy;&chcy;&ncy;&ocy;&iecy; &ocy;&chcy;&acy;&rcy;&ocy;&vcy;&acy;&ncy;&icy;&iecy;&quot;
-              p.sales-block__description &mcy;&acy;&scy;&scy;&icy;&vcy; &pcy;&acy;&lcy;&icy;&scy;&acy;&ncy;&dcy;&rcy;&acy;, &lcy;&acy;&tcy;&ucy;&ncy;&softcy;
+            .sales-block__button
+              a(href="#") В корзину
   .container
     .page__button
       a.page__button-link(href='#') &Vcy;&scy;&iecy; &tcy;&ocy;&vcy;&acy;&rcy;&ycy; &vcy; &rcy;&acy;&scy;&pcy;&rcy;&ocy;&dcy;&acy;&zhcy;&iecy;
