--- a/app/sass/global/_global.sass
+++ b/app/sass/global/_global.sass
@@ -108,7 +108,6 @@ a
 // nav for carousels
 .owl-nav
 	display: block
-
 .owl-prev,
 .owl-next,
 	position: absolute
@@ -129,6 +128,7 @@ a
 	&-link
 		position: relative
 		margin: 0 auto
+		display: inline-block
 		text-transform: initial
 		letter-spacing: 0.05em
 		color: $orange
