--- a/app/sass/global/_variables.sass
+++ b/app/sass/global/_variables.sass
@@ -12,6 +12,7 @@ $black: #000000
 $greyLight: #e6e6e6
 $greyLighten: #cccccc
 $grey: #999999
+$greyLight2: #d5d5d8
 $greyDark: #666666
 $greyDarken: #333333
 $red: #ff3333
@@ -26,9 +27,11 @@ $pink: #ffcccc
 $dfont: 'Cera Pro Regular'
 $dfontMadiun: 'Cera Pro Medium'
 $dfontBold: 'Cera Pro Bold'
+$dfontLight: 'Cera Pro Light'
 $fontRare: 'Proxima Nova Regular'
 $fontItalic: 'Alexander'
 $fontTitle: 'Montserat Regular'
+$fontMedium: 'Montserat Medium'
 
 // links hover
 @mixin link-hover
@@ -62,4 +65,4 @@ $fontTitle: 'Montserat Regular'
 
 @mixin a-hover
 		text-decoration: none
-		color: $orange
+		color: $orange * 1.2
