--- a/app/sass/blocks/_sales-block.sass
+++ b/app/sass/blocks/_sales-block.sass
@@ -3,6 +3,7 @@
 		margin-bottom: $vert-margin
 	&__img-wrap
 		position: relative
+		margin-bottom: $blockindent
 		&::before
 			content: '%'
 			position: absolute
@@ -26,5 +27,56 @@
 			vertical-align: middle
 			border: 1px solid $orange
 			border-radius: 50%
+	&__text-block
+		margin-bottom: $blockindent * 0.5
+	&__title
+		margin-bottom: $dfz
+		display: block
+		text-transform: uppercase
+	&__description
+		margin-bottom: $dfz * 1.5
+		display: block
+	&__price-wrap
+		vertical-align: middle
 	&__old-price
-		font-size: $dfz / 1.5
+		margin-right: 1em
+		font-size: $dfz * 0.8
+		color: $greyDark
+	&__price
+		font-size: $dfz * 1.3
+	&__button
+		a
+			position: relative
+			padding: $dfz 2em $dfz 3em
+			display: block
+			font-family: $dfontMadiun
+			border: 1px solid $pink
+			border-radius: 2px
+			cursor: pointer
+			&::after
+				content: ''
+				position: absolute
+				top: 0
+				right: 0
+				display: inline-block
+				width: 30%
+				height: 100%
+				background: url('../img/icons/cart2.png') center no-repeat
+				border-left: 1px solid $pink
+
+	.owl-carousel .owl-nav .owl-next,
+	.owl-carousel .owl-nav .owl-prev
+		font-size: 0
+		&::before
+			content: ''
+			display: block
+			width: 50px
+			height: 50px
+			border-left: 1px solid $black
+			border-bottom: 1px solid $black
+	.owl-carousel .owl-nav .owl-prev
+		margin-left: -100px
+		transform: rotate(45deg)
+	.owl-carousel .owl-nav .owl-next
+		margin-right: -100px
+		transform: rotate(-135deg)
