--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -16,6 +16,7 @@ body
 			include ./blocks/features.pug
 		.page-footer
 			include ./blocks/footer.pug
+			include ./blocks/cart-popup.pug
 	block scripts
 		script(src='./js/libs.min.js')
 		script(src='./js/common.js')
