--- a/app/sass/common.sass
+++ b/app/sass/common.sass
@@ -9,3 +9,4 @@
 @import "app/sass/blocks/sales-block.sass"
 @import "app/sass/blocks/features.sass"
 @import "app/sass/blocks/footer.sass"
+@import "app/sass/blocks/cart-popup.sass"
