--- a/app/pug/blocks/cart-popup.pug
+++ b/app/pug/blocks/cart-popup.pug
@@ -1,2 +1,24 @@
 .cart-popup
-	.cart-popup__bg
+	.cart-popup__window
+		.cart-popup__window-close-btn
+		.cart-popup__window-title
+			span Добавлено в корзину
+		.cart-popup__window-goods
+			ul.cart-popup__window-goods-list
+				li.cart-popup__window-goods-list-item
+					.cart-popup__window-goods-list-item-left
+						.cart-popup__window-goods-list-item-left-img
+							img(src='', alt='')
+					.cart-popup__window-goods-list-item-center
+						.cart-popup__window-goods-list-item-center-title
+							a(href='#') Комод "Восточное Очарование"
+						.cart-popup__window-goods-list-item-center-descr
+							span массив палисандра, латунь
+					.cart-popup__window-goods-list-item-right
+						.cart-popup__window-goods-list-item-right-old-price
+							span
+								strike 59700 &#x20BD;
+						.cart-popup__window-goods-list-item-right-new-price
+							span 59700 &#x20BD;
+		.cart-popup__window-descr
+		.cart-popup__window-buttons
