--- a/app/sass/blocks/_cart-popup.sass
+++ b/app/sass/blocks/_cart-popup.sass
@@ -1,8 +1,15 @@
 .cart-popup
-	&__bg
+	z-index: 99999
+	position: fixed
+	top: 0
+	right: 0
+	bottom: 0
+	left: 0
+	background-color: $red
+	&__window
 		position: absolute
-		top: 0
-		right: 0
-		bottom: 0
-		left: 0
-		background: $white
+		top: 20%
+		right: 20%
+		bottom: 20%
+		left: 20%
+		background-color: $white
