--- a/app/sass/blocks/_header.sass
+++ b/app/sass/blocks/_header.sass
@@ -9,6 +9,8 @@
 		display: flex
 		width: 100%
 		height: 100%
+	&__left
+		padding-left: 1em
 	&__center
 		margin: auto
 
@@ -29,6 +31,9 @@
 			border-radius: 20px
 			&::placeholder
 				color: $greyDarken
+			&:focus
+				outline: none
+				border-color: $redLight
 		&-submit
 			position: absolute
 			top: 2px
@@ -61,6 +66,7 @@
 					text-decoration: none
 					font-family: $dfontBold
 					color: $black
+					transition: 0.2s ease-in-out
 					@include link-hover
 
 	&__cart
@@ -105,5 +111,6 @@
 					text-decoration: none
 					font-family: $fontItalic
 					color: $black
+					transition: 0.2s ease-in-out
 					@include link-hover-bottom-menu
 
