--- a/app/sass/blocks/_menu.sass
+++ b/app/sass/blocks/_menu.sass
@@ -1,4 +1,5 @@
 .dropdown-menu
+	z-index: 900
 	display: none
 	position: absolute
 	top: 100%
@@ -7,6 +8,7 @@
 	padding-top: $dfz * 4
 	background-color: $pinkLight
 	&__left
+		padding-left: 1em
 		&-list
 			list-style: none
 			font-size: 0
