--- a/app/pug/blocks/footer.pug
+++ b/app/pug/blocks/footer.pug
@@ -31,9 +31,9 @@
 					.phone-number.phone-number--footer
 							.phone-number__icon
 								include ../../img/icons/phone.svg
-							span.phone-number__text
+							span.phone-number__text.phone-number__text
 								a(href='tel:+79031035309') 7 903 103-53-09
-					.page-footer__top-right-text
+					.page-footer__top-right-text.
 						span По всем вопросам пишите нам на
 					.page-footer__top-right-email
 						.page-footer__top-right-email-icon
