--- a/app/pug/blocks/menu.pug
+++ b/app/pug/blocks/menu.pug
@@ -118,7 +118,7 @@
 									li
 										a(href="#")= item
 
-			.col-md-4
+			.col-md-4.dropdown-menu__right-column
 				- for (var i = 0; i < 2; i++)
 					.dropdown-menu__right
 						strong.dropdown-menu__right-title Где купить
