--- a/app/sass/blocks/_menu.sass
+++ b/app/sass/blocks/_menu.sass
@@ -20,6 +20,14 @@
 		min-height: 100%
 		background-color: rgba(255,255,255,0.7)
 		box-shadow: 0px 55px 55px 0px rgba(255,255,255,0.7)
+	@media screen and (max-width: 768px)
+		position: static
+		padding-bottom: 0
+		box-shadow: none
+		&::after
+			display: none
+	.container
+		margin: 0
 	&__left
 		padding-left: 1em
 		&-list
@@ -41,6 +49,12 @@
 						g
 							*
 								stroke: $red
+				@media screen and (max-width: 768px)
+					width: 50%
+					padding: 0
+					&:nth-child(1)
+						padding:
+							right: 0
 				&-icon
 					margin-bottom: $dfz
 					height: 40px
@@ -51,6 +65,11 @@
 					font-family: $dfontBold
 		&-sublist
 			list-style: none
+			@media screen and (max-width: 768px)
+				display: none
+	&__right-column
+		@media screen and (max-width: 768px)
+			display: none
 	&__right
 		padding:
 			top: $vert-margin * 0.5
