--- a/app/sass/global/_global.sass
+++ b/app/sass/global/_global.sass
@@ -84,8 +84,20 @@ input
 .phone-number
 	margin: auto 0
 	width: 100%
+	@media screen and (max-width: 768px)
+		display: none
+	&--mob
+		width: 100%
+		height: 100%
+		a
+			display: block
+		@media screen and (max-width: 768px)
+			display: flex
+			justify-content: center
 	&--footer
 		margin: 0 0 $dfz * 2 0
+		@media screen and (max-width: 768px)
+			display: block
 	&__text
 		display: inline-block
 		width: 70%
@@ -109,6 +121,8 @@ input
 			svg
 				path
 					stroke: $redLight
+		&--mob
+			margin: 0
 
 // nav for carousels
 .owl-nav
@@ -152,7 +166,7 @@ input
 		display: block
 		border: 1px solid $orange
 		border-radius: 2px
-		
+
 // standard button
 .standart-button
 	position: relative
